@@ -1,3 +1,11 @@
+2002-08-30  Brent Welch <welch@panasas.com>
+        * (In the tclhttpd-3-4-rel branch).
+        * Modified Auth_Check, which is used by DocAccessHook, to
+        disallow retrieval of .tml, .tclaccess and .htaccess files.
+        This vulnerability was identified by David Welton, although
+        I'll note you had to had permission to retrieve the access
+        control files.
+
 2002-08-29  Brent Welch <welch@panasas.com>
         * (In the tclhttpd-3-4-rel branch).  These were added on
         the suggestion of David Welton
